Changed background to blue

--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,11 @@ nav {
     transition: all 1s; }
 
 body {
-  background: green; }
+  background: blue; }
 
 p {
   background: white;
-  color: green;
+  color: blue;
   border: 1px solid black;
   font-size: 24px; }
 
